--- a/workshop2020/website/templates/index.html
+++ b/workshop2020/website/templates/index.html
@@ -59,7 +59,7 @@
                 <h5 class="card-header">About Us</h5>
             <div class="card-body">
                 <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django', follow up the tutorial to learn how we made it..!</p>
-                <a href="https://djangocentral.com/building-a-blog-application-with-django"
+                <a href="https://github.com/rockstardotb/workshop2020/blob/master/README.md"
                    class="btn btn-danger">Know more!</a>
             </div>
         </div>
