--- a/workshop2020/website/templates/base.html
+++ b/workshop2020/website/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -12,28 +13,37 @@
 
     <body>
         <style>
-            body {
-            font-family: "Roboto", sans-serif;
+            body {	    
+            font-family: "Roboto", {{ font_type }};
             font-size: 17px;
             background-color: #fdfdfd;
+	    background-image: url({{ background_image.url }});
         }
         .shadow {
             box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
         }
         .btn-danger {
-            color: #fff;
-            background-color: #f00000;
-            border-color: #dc281e;
+	    color: {{ text_color }};
+	    background-color: {{ button_color }};
+	    border-color: {{ button_color }};
         }
         .masthead {
-            background: #3398E1;
+            background: {{ navbar_color }};
             height: auto;
             padding-bottom: 15px;
             box-shadow: 0 16px 48px #E3E7EB;
             padding-top: 10px;
         }
-    </style>
-
+	footer {
+		position: fixed;
+	        left: 0;
+	        bottom: 0;
+		width: 100%;
+		background: {{ navbar_color }};
+		color: {{ text_color }};
+		padding-bottom: 15px;
+	}
+	</style>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
@@ -63,7 +73,7 @@
         {% endblock content %}
         <!-- Footer -->
         <footer class="py-3 bg-grey">
-            <p class="m-0 text-dark text-center ">Copyright &copy; Django Blog</p>
+            <p class="m-0 text-center ">Copyright &copy; Django Central</p>
         </footer>
     </body>
 </html>
