--- a/workshop2020/website/templates/base.html
+++ b/workshop2020/website/templates/base.html
@@ -17,7 +17,7 @@
             font-family: "Roboto", {{ font_type }};
             font-size: 17px;
             background-color: #fdfdfd;
-	    background-image: url({{ background_image.url }});
+	    background-image: url("/images/{{ background_image }}") !important;
         }
         .shadow {
             box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
