--- a/workshop2020/website/templates/base.html
+++ b/workshop2020/website/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -12,38 +11,39 @@
     </head>
 
     <body>
-        <style>
-            body {	    
-            font-family: "Roboto", {{ font_type }};
-            font-size: 17px;
-            background-color: #fdfdfd;
-	    background-image: url("/images/{{ background_image }}") !important;
-        }
-        .shadow {
-            box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-        }
-        .btn-danger {
-	    color: {{ text_color }};
-	    background-color: {{ button_color }};
-	    border-color: {{ button_color }};
-        }
-        .masthead {
-            background: {{ navbar_color }};
-            height: auto;
-            padding-bottom: 15px;
-            box-shadow: 0 16px 48px #E3E7EB;
-            padding-top: 10px;
-        }
-	footer {
-		position: fixed;
-	        left: 0;
-	        bottom: 0;
-		width: 100%;
-		background: {{ navbar_color }};
+	 <style>
+		body {
+		font-family: "Roboto", {{ font_type }};
+		font-size: 17px;
+		background-color: #fdfdfd;
+		background-image: url("/images/{{ background_image }}") !important;
+	    }
+	    .shadow {
+		box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+	    }
+	    .btn-danger {
 		color: {{ text_color }};
+		background-color: {{ button_color }};
+		border-color: {{ button_color }};
+	    }
+	    .masthead {
+		background: {{ navbar_color }};
+		height: auto;
 		padding-bottom: 15px;
-	}
-	</style>
+		box-shadow: 0 16px 48px #E3E7EB;
+		padding-top: 10px;
+	    }
+	    footer {
+		    position: fixed;
+		    left: 0;
+		    bottom: 0;
+		    width: 100%;
+		    background: {{ navbar_color }};
+		    color: {{ text_color }};
+		    padding-bottom: 15px;
+	    }
+	    </style>
+
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
@@ -67,13 +67,13 @@
                 </div>
             </div>
         </nav>
-
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
         <!-- Footer -->
         <footer class="py-3 bg-grey">
-            <p class="m-0 text-center ">Copyright &copy; Django Central</p>
+            <p class="m-0 text-center ">Copyright &copy; Django Blog</p>
         </footer>
     </body>
 </html>
+
